--- a/com.task4java.android.examples/AndroidManifest.xml
+++ b/com.task4java.android.examples/AndroidManifest.xml
@@ -12,15 +12,19 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme" android:name="App">
         <activity
             android:name=".activity.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            </intent-filter>            
         </activity>
-    </application>
+        <activity android:name=".activity.WelcomeActivity">
+        </activity>
+        <activity android:name=".activity.AboutActivity">
+        </activity>
+        </application>
 
 </manifest>
